p3/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground-service
spec:
  selector:
    app: wil-playground
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8888
